--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <main>
-            <h1>Why Real Madrid is the best Football team EVER</h1>
+            <h1>Why Real Madrid is the best Football team <strong>EVER</strong></h1>
         </main>
         <script src="index.js"></script>
     </body>
