--- a/index.html
+++ b/index.html
@@ -1,17 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>My Website</title>
-        <link rel="stylesheet" href="./style.css">
-        <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    </head>
-    <body>
-        <main>
-            <h1>Why Real Madrid is the best Football team <strong>EVER</strong></h1>
-        </main>
-        <script src="index.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Real Madrid Fan Site</title>
+    <link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+
+    <!-- HERO SECTION -->
+    <header class="hero">
+        <h1>Real Madrid</h1>
+        <p>Mahdi Khalili's website about the amazing Real Madrid</p>
+    </header>
+
+    <!-- ABOUT SECTION -->
+    <section class="intro">
+        <h2>About Real Madrid</h2>
+        <p>
+            Real Madrid Club de Fútbol, commonly referred to as Real Madrid, is a Spanish professional 
+            football club based in Madrid. Founded in 1902, the club has worn its iconic white kit 
+            since its earliest days.
+        </p>
+
+        <p>
+            Real Madrid isn’t just a football club — it’s the sporting equivalent of a blockbuster movie franchise. Every season feels like a new episode where the cast features world-class megastars, the budget somehow keeps getting bigger, and the plot twist is usually them lifting another trophy. Draped in pristine white (because when you win that often, you don’t mind getting grass stains), Los Blancos have built a reputation as football’s final boss. Opponents don’t just play them — they hope to survive them. The Bernabéu is their fortress: part stadium, part museum, part pressure cooker, where last-minute comebacks somehow feel like a scheduled activity. From Galácticos past and present to Champions League nights that look scripted by Hollywood, Real Madrid remains the team everyone either dreams of playing for or dreams of beating — usually unsuccessfully.
+        </p>
+
+        <a class="about-button" href="about.html">Learn More</a>
+    </section>
+
+    <!-- LEGENDS SECTION -->
+    <section class="legends">
+        <h2>Club Legends</h2>
+
+        <div class="legend-container">
+
+            <!-- RONALDO -->
+            <div class="legend-card highlight">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/8c/Cristiano_Ronaldo_2018.jpg" alt="Cristiano Ronaldo">
+                <h3>Cristiano Ronaldo</h3>
+                <p>The greatest goal machine in Real Madrid history. 450 goals in 438 games. Legendary.</p>
+            </div>
+
+            <!-- ZIDANE -->
+            <div class="legend-card">
+                <img src="https://assets.realmadrid.com/is/image/realmadrid/1330190795142?$Desktop$&fit=wrap&wid=480">
+                <h3>Zinedine Zidane</h3>
+                <p>Master of elegance. Scored the most iconic Champions League final goal ever.</p>
+            </div>
+
+            <!-- SERGIO RAMOS -->
+            <div class="legend-card">
+                <img src="https://imageio.forbes.com/specials-images/imageserve/5ecee8ff6abe090007ec69b6/0x0.jpg?format=jpg&crop=1196,1197,x317,y284,safe&height=416&width=416&fit=bounds">
+                <h3>Sergio Ramos</h3>
+                <p>Captain. Warrior. 93rd-minute saviour. The definition of clutch.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <p>© 2025 Real Madrid Fan Site – Created by Mahdi Khalili</p>
+    </footer>
+
+</body>
 </html>
